--- a/style.css
+++ b/style.css
@@ -2,12 +2,28 @@ html {
     margin:0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    font-size: 10px;
+}
+
+body {
+    background: url('img/bg.top.png') no-repeat top right;
+}
+
+.text_green {
+    color: #0f5435;
+}
+
+.text_orange {
+    color: #d67105;
 }
 
 .btn-nutri {
     background: linear-gradient(#0c9c3b, #0f5435);
     border: none;
     animation: btnPulse 1.2s linear infinite;
+    text-transform: uppercase;
+    font-size: 18px;
 }
 
 .btn-nutri:hover {
@@ -16,7 +32,61 @@ html {
 }
 
 #block_01 {
-    /* background: linear-gradient(#ffffff, #ededed); */
+    /* background: linear-gradient(#0f5435 5%, #0c9c3b 50%) */
+}
+
+#block_02 {
+    background: linear-gradient(#0c9c3b, #0f5435);
+    background: #0f5435;
+}
+
+.block_title {
+    text-align: center;
+    margin-bottom: 30px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 3.1rem;
+    text-transform: uppercase;
+    /* text-shadow:
+    1px 1px 0 rgba(255,255,255,0.5),
+    -1px 1px 0 rgba(255,255,255,0.5),
+    -1px -1px 0 rgba(255,255,255,0.5),
+    1px -1px 0 rgba(255,255,255,0.5); */
+}
+
+.block_text {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 3.1rem;
+    font-weight: bold;
+    line-height: 38px;
+
+    background: rgba( 255, 255, 255, 0.35 );
+    backdrop-filter: blur( 1.5px );
+    -webkit-backdrop-filter: blur( 1.5px );
+    border-radius: 10px;
+
+    text-shadow:
+    1px 1px 0 rgba(255,255,255,0.5),
+    -1px 1px 0 rgba(255,255,255,0.5),
+    -1px -1px 0 rgba(255,255,255,0.5),
+    1px -1px 0 rgba(255,255,255,0.5);
+}
+
+.list-group, .list-group-item {
+    background: transparent;
+    color: #fff;
+    font-size: 16px;
+}
+
+.list-group-item {
+    display: flex;
+    border: 0;
+    margin-bottom: 9px;
+}
+
+.list-group-item::before {
+    content: url('img/checklist.png');
 }
 
 @keyframes btnPulse {
