--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-    background: url('img/bg.top.png') no-repeat top right;
+    background: url('img/bg.top.webp') no-repeat top right;
 }
 
 .m-t-minus-10 {
@@ -24,6 +24,10 @@ body {
 
 .text_orange {
     color: #d47910!important;
+}
+
+.bg-success {
+    background-color: #0f5435!important;
 }
 
 .btn-nutri {
@@ -63,12 +67,16 @@ body {
     color: #686868;
 }
 
+#block_05 {
+    background: linear-gradient(transparent 70%, #0c9c3b);
+}
+
 #block_05 p {
     font-size: 18px;
 }
 
 #block_04 {
-    background: url('img/bg-orange.jpeg') no-repeat bottom center fixed;
+    background: url('img/bg-orange.webp') no-repeat bottom center fixed;
     background-size: cover;
     font-size: 22px;
     text-align: center;
@@ -126,6 +134,20 @@ body {
 
 .list-group-item::before {
     content: url('img/checklist.png');
+}
+
+.values {
+    text-align: center;
+}
+
+.values h2 {
+    font-size: 32px;
+}
+
+.values h2:nth-child(2) {
+    font-size: 52px;
+    font-weight: 900;
+    animation: btnPulse 1.2s linear infinite;
 }
 
 @keyframes btnPulse {
