--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ html {
     box-sizing: border-box;
     font-size: 10px;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 }
 
 body {
