add wordpress theme

--- a/wptheme/anutritaon/style.css
+++ b/wptheme/anutritaon/style.css
@@ -1,3 +1,11 @@
+/*
+Theme Name: A Nutri Tá On
+Author: Christian Herber dos Santos
+Version: 1.0
+Requires at least: 5.0
+Requires PHP: 7.4
+Description: Landingpage a nutri tá on
+*/
 html {
     margin:0;
     padding: 0;
